--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,12 @@
 </head>
 <body>
 
-  <my-name first="Stencil" last="JS"></my-name>
+  
+<wu-spinner type="android" color="green"></wu-spinner>
+<wu-spinner type="circle" color="#333333"></wu-spinner>
+<wu-spinner type="bars" color="orange"></wu-spinner>
+<wu-spinner type="ios" color="red"></wu-spinner>
+
 
 </body>
 </html>
