default value update

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
 </head>
 <body>
 
-  
-<wu-spinner type="android" color="green"></wu-spinner>
-<wu-spinner type="circle" color="#333333"></wu-spinner>
-<wu-spinner type="bars" color="orange"></wu-spinner>
-<wu-spinner type="ios" color="red"></wu-spinner>
-
+<div  style="color: #45a5ff">
+  <wu-spinner type="android" color="green"></wu-spinner>
+  <wu-spinner type="circle" color="currentColor"></wu-spinner>
+  <wu-spinner type="bars" color="#f9e833"></wu-spinner>
+  <wu-spinner type="ios" color="red"></wu-spinner>
+</div>
 
 </body>
 </html>
